objects/GroupBeacon__c.object
<CustomObject>
    <fields>
        <fullName>AlternateSFId__c</fullName>
        <description>Unique identifier signifying the target instance created Id for the corresponding source record</description>
        <inlineHelpText>Unique identifier signifying the target instance created Id for the corresponding source record</inlineHelpText>
        <label>AlternateSFId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueEmail__c</fullName>
        <description>Email Address associated to Queue</description>
        <inlineHelpText>Email Address associated to Queue</inlineHelpText>
        <label>QueueEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <description>Name of the Group/ Queue</description>
        <inlineHelpText>Name of the Group/ Queue</inlineHelpText>
        <label>QueueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueType__c</fullName>
        <description>The Type associated to the Queue</description>
        <inlineHelpText>The Type associated to the Queue</inlineHelpText>
        <label>QueueType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSFId__c</fullName>
        <description>Unique identifier signifying the source instance created Id for the corresponding source record</description>
        <inlineHelpText>Unique identifier signifying the source instance created Id for the corresponding source record</inlineHelpText>
        <label>SourceSFId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <description>Custom object used to sync source Group/ Queues with target instance (HS1)</description>
    <label>GroupBeacon</label>
    <nameField>
        <displayFormat>GRPBCN-{000000000}</displayFormat>
        <label>GroupBeacon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GroupsBeacon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>